--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <a href="home.html">
+        <a href="index.html">
             <img class="logo" src="logo2.png" alt="logo">
         </a>
         <nav>
