--- a/aboutus.html
+++ b/aboutus.html
@@ -14,7 +14,7 @@
 
 </head>
 <header>
-    <a href="home.html">
+    <a href="index.html">
         <img class="logo" src="logo2.png" alt="logo">
     </a>
         
