--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -14,7 +14,7 @@
 
 </head>
 <header>
-    <a href="home.html">
+    <a href="/html/index.html">
         <img class="logo" src="/logos/logo2.png" alt="logo">
     </a>
         
