--- a/html/workpics.html
+++ b/html/workpics.html
@@ -14,6 +14,9 @@
 
 </head>
 <body>
+
+
+
     <header>
         <a href="/html/index.html">
             <img class="logo" src="/logos/logo2.png" alt="logo">
@@ -30,6 +33,81 @@
     <div class="header-1">
         <h2>Browse All Our Work</h2>
     </div>
+
+
+
+
+    <div class="cards-container">
+        <div class="scene">
+            <div class="card">
+                <div class="card__face card__face--front">Front 1</div>
+                <div class="card__face card__face--back">
+                    <div class="darker-overlay"></div>
+                    <div class="backcontent">BACK 1</div>
+                </div>
+            </div>
+        </div>
+        <div class="scene">
+            <div class="card">
+                <div class="card__face card__face--front">Front 1</div>
+                <div class="card__face card__face--back">
+                    <div class="darker-overlay"></div>
+                    <div class="backcontent">BACK 1</div>
+                </div>
+            </div>
+        </div>
+        <div class="scene">
+            <div class="card">
+                <div class="card__face card__face--front">Front 1</div>
+                <div class="card__face card__face--back">
+                    <div class="darker-overlay"></div>
+                    <div class="backcontent">BACK 1</div>
+                </div>
+            </div>
+        </div>
+        <div class="scene">
+            <div class="card">
+                <div class="card__face card__face--front">Front 1</div>
+                <div class="card__face card__face--back">
+                    <div class="darker-overlay"></div>
+                    <div class="backcontent">BACK 1</div>
+                </div>
+            </div>
+        </div>
+        <div class="scene">
+            <div class="card">
+                <div class="card__face card__face--front">Front 1</div>
+                <div class="card__face card__face--back">
+                    <div class="darker-overlay"></div>
+                    <div class="backcontent">BACK 1</div>
+                </div>
+            </div>
+        </div>
+        <div class="scene">
+            <div class="card">
+                <div class="card__face card__face--front">Front 1</div>
+                <div class="card__face card__face--back">
+                    <div class="darker-overlay"></div>
+                    <div class="backcontent">BACK 1</div>
+                </div>
+            </div>
+        </div>
+
+        
+        
+        <!-- Repeat for each card -->
+    </div>
+
+<script>
+    var cards = document.querySelectorAll('.card');
+    cards.forEach(function(card) {
+        card.addEventListener('click', function() {
+            card.classList.toggle('is-flipped');
+        });
+    });
+</script>
+
+       <!--
     <div class="imagecontainer">
         <div class="box">
             <img src="/pictures/restaurant1.jpeg">
@@ -63,3 +141,5 @@
             <img src="/pictures/restaurant3.jpeg">
         </div>
     </div>
+
+    -->
