stupid stuff fixing

--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,6 @@
         <a class="cta" href="#contactInfoForm"><button>Contact</button></a>
     </header>
     
-<div class="introText">HELLO</div>
 
 <div class="kitchenImage">
     <div class="dark-overlay"></div>
@@ -245,7 +244,7 @@
   <body>
 	<div class="scene">
   		<div class="card">
-    		<div class="card__face card__face--front"></div>
+    		<div class="card__face card__face--front">FRONT</div>
             <div class="card__face card__face--back">
                 
                 <div class="darker-overlay"></div>
