--- a/html/index.html
+++ b/html/index.html
@@ -28,6 +28,10 @@
         <a class="cta" href="#contactInfoForm"><button>Contact</button></a>
     </header>
     
+<div class="intro">
+    <h1>for all your handy work needs</h1>
+    <p>you call, we deliver. fast, reliable, and kind service.</p>
+</div>
 
 <div class="kitchenImage">
     <div class="dark-overlay"></div>
@@ -239,24 +243,3 @@
 </html>
 
 
-<html lang="en">
-  
-  <body>
-	<div class="scene">
-  		<div class="card">
-    		<div class="card__face card__face--front">FRONT</div>
-            <div class="card__face card__face--back">
-                
-                <div class="darker-overlay"></div>
-                <div class="backcontent">BACK</div>
-            </div>
-  		</div>
-	</div>
-    <script>
-	    var card = document.querySelector('.card');
-		card.addEventListener( 'click', function() {
- 			card.classList.toggle('is-flipped');
-		});
-	</script>
-  </body>
-</html>
