--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="header-1">
-    <h2>Renovation and Maintenance</h2>
+    <h2>Handy Work and Maintenance</h2>
 </div>
 
 <div class="container">
@@ -129,7 +129,7 @@
         </div>
         
         <div class="contactForm" id ="contactInfoForm">
-            <form action="https://formsubmit.co/0b5b8d3f441782764f2be48478291b33" method="POST">
+            <form action="https://formsubmit.co/ae3c5a37484514f59f7c8d2100c23bf7" method="POST">
             <h2 class="headerButBlack">Send A Message</h2>
             <div class="formBox">
                 <div class="inputBox w50">
