--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -20,11 +20,11 @@
         
     <nav>
         <ul class="nav_links">
-            <li><a href="/html/aboutus.html">ABOUT US</a></li>
+            
             <li><a href="/html/services.html">SERVICES</a></li>
             <li><a href="/html/index.html#location">LOCATIONS</a></li>
             <li><a href="/html/index.html#process">OUR PROCESS</a></li>
         </ul>
     </nav>
-    <a class="cta" href="#"><button>Contact</button></a>
+    <a class="cta" href="/html/index.html#contactInfoForm"><button>Contact</button></a>
 </header>
