--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,6 @@
         <img class="logo" src="/logos/logo2.png" alt="logo">
         <nav>
             <ul class="nav_links">
-                <li><a href="/html/aboutus.html">ABOUT US</a></li>
                 <li><a href="/html/services.html">SERVICES</a></li>
                 <li><a href="#location">LOCATIONS</a></li>
                 <li><a href="#process">OUR PROCESS</a></li>
@@ -61,7 +60,7 @@
     
 </div>
 
-<div class="image-container-header">
+<div class="image-container-header" id="process">
     <h2>What We Do</h2>
 </div>
 <div class="image-container">
@@ -118,9 +117,7 @@
                 <ul class="info">
                     <li>
                         <span><img src="/logos/location2.png"></span>
-                        <span>6 Rea Court <br>
-                        St. Thomas Ontario<br>
-                        N5P 0E8</span>
+                        <span>London and Surrounding Areas</span>
                     </li>
                     <li>
                         <span><img src="/logos/maillogo.png"></span>
