--- a/workpics.html
+++ b/workpics.html
@@ -8,7 +8,7 @@
 
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
@@ -18,8 +18,8 @@
 
 
     <header>
-        <a href="/html/index.html">
-            <img class="logo" src="/logos/logo2.png" alt="logo">
+        <a href="index.html">
+            <img class="logo" src="logo2.png" alt="logo">
         </a>
             
         <nav>
@@ -28,7 +28,7 @@
                 
             </ul>
         </nav>
-        <a class="cta" href="/html/index.html#contactInfoForm"><button>Contact</button></a>
+        <a class="cta" href="index.html#contactInfoForm"><button>Contact</button></a>
     </header>
     <div class="header-1">
         <h2>Browse All Our Work</h2>
@@ -39,8 +39,8 @@
     <div class="cards-container">
         <div class="scene">
             <div class="card">
-                <div class="card__face card__face--front" style="background-image: url('/pictures/IMG_3276.jpg');"></div>
-                <div class="card__face card__face--back" style="background-image:  url('/pictures/IMG_3276.jpg');">
+                <div class="card__face card__face--front" style="background-image: url('IMG_3276.jpg');"></div>
+                <div class="card__face card__face--back" style="background-image:  url('IMG_3276.jpg');">
                     <div class="darker-overlay"></div>
                     <div class="backcontent">BACK 1</div>
                 </div>
@@ -48,8 +48,8 @@
         </div>
         <div class="scene">
             <div class="card">
-                <div class="card__face card__face--front" style="background-image: url('/pictures/counter.jpg');"></div>
-                <div class="card__face card__face--back" style="background-image: url('/pictures/counter.jpg');">
+                <div class="card__face card__face--front" style="background-image: url('counter.jpg');"></div>
+                <div class="card__face card__face--back" style="background-image: url('counter.jpg');">
                     <div class="darker-overlay"></div>
                     <div class="backcontent">BACK 2</div>
                 </div>
@@ -57,8 +57,8 @@
         </div>
         <div class="scene">
             <div class="card">
-                <div class="card__face card__face--front" style="background-image: url('/pictures/drywall.jpeg');"></div>
-                <div class="card__face card__face--back" style="background-image: url('/pictures/drywall.jpeg');">
+                <div class="card__face card__face--front" style="background-image: url('drywall.jpeg');"></div>
+                <div class="card__face card__face--back" style="background-image: url('drywall.jpeg');">
                     <div class="darker-overlay"></div>
                     <div class="backcontent">BACK 2</div>
                 </div>
@@ -66,8 +66,8 @@
         </div>
         <div class="scene">
             <div class="card">
-                <div class="card__face card__face--front" style="background-image: url('/pictures/IMG_3277.jpg');"></div>
-                <div class="card__face card__face--back" style="background-image: url('/pictures/IMG_3277.jpg');">
+                <div class="card__face card__face--front" style="background-image: url('IMG_3277.jpg');"></div>
+                <div class="card__face card__face--back" style="background-image: url('IMG_3277.jpg');">
                     <div class="darker-overlay"></div>
                     <div class="backcontent">BACK 2</div>
                 </div>
@@ -75,8 +75,8 @@
         </div>
         <div class="scene">
             <div class="card">
-                <div class="card__face card__face--front" style="background-image: url('/pictures/IMG_3275.jpg');"></div>
-                <div class="card__face card__face--back" style="background-image: url('/pictures/IMG_3275.jpg');">
+                <div class="card__face card__face--front" style="background-image: url('IMG_3275.jpg');"></div>
+                <div class="card__face card__face--back" style="background-image: url('IMG_3275.jpg');">
                     <div class="darker-overlay"></div>
                     <div class="backcontent">BACK 2</div>
                 </div>
@@ -84,8 +84,8 @@
         </div>
         <div class="scene">
             <div class="card">
-                <div class="card__face card__face--front" style="background-image: url('/pictures/faucet.jpg');"></div>
-                <div class="card__face card__face--back" style="background-image: url('/pictures/faucet.jpg');">
+                <div class="card__face card__face--front" style="background-image: url('faucet.jpg');"></div>
+                <div class="card__face card__face--back" style="background-image: url('faucet.jpg');">
                     <div class="darker-overlay"></div>
                     <div class="backcontent">BACK 2</div>
                 </div>
