--- a/services.html
+++ b/services.html
@@ -8,25 +8,25 @@
 
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 </head>
 <body>
     <header>
-        <a href="/html/index.html">
-            <img class="logo" src="/logos/logo2.png" alt="logo">
+        <a href="index.html">
+            <img class="logo" src="logo2.png" alt="logo">
         </a>
         <nav>
             <ul class="nav_links">
                 
-                <li><a href="/html/services.html">SERVICES</a></li>
-                <li><a href="/html/index.html#location">LOCATIONS</a></li>
-                <li><a href="/html/index.html#process">OUR PROCESS</a></li>
+                <li><a href="services.html">SERVICES</a></li>
+                <li><a href="index.html#location">LOCATIONS</a></li>
+                <li><a href="index.html#process">OUR PROCESS</a></li>
             </ul>
         </nav>
-        <a class="cta" href="/html/index.html#contactInfoForm"><button>Contact</button></a>
+        <a class="cta" href="index.html#contactInfoForm"><button>Contact</button></a>
     </header>
     
 
