--- a/workpics.html
+++ b/workpics.html
@@ -42,7 +42,7 @@
                 <div class="card__face card__face--front" style="background-image: url('IMG_3276.jpg');"></div>
                 <div class="card__face card__face--back" style="background-image:  url('IMG_3276.jpg');">
                     <div class="darker-overlay"></div>
-                    <div class="backcontent">BACK 1</div>
+                    <div class="backcontent">Patio Restoration</div>
                 </div>
             </div>
         </div>
@@ -51,7 +51,7 @@
                 <div class="card__face card__face--front" style="background-image: url('counter.jpg');"></div>
                 <div class="card__face card__face--back" style="background-image: url('counter.jpg');">
                     <div class="darker-overlay"></div>
-                    <div class="backcontent">BACK 2</div>
+                    <div class="backcontent">Equipment Repair</div>
                 </div>
             </div>
         </div>
@@ -60,7 +60,7 @@
                 <div class="card__face card__face--front" style="background-image: url('drywall.jpeg');"></div>
                 <div class="card__face card__face--back" style="background-image: url('drywall.jpeg');">
                     <div class="darker-overlay"></div>
-                    <div class="backcontent">BACK 2</div>
+                    <div class="backcontent">Drywall Repair</div>
                 </div>
             </div>
         </div>
@@ -69,7 +69,7 @@
                 <div class="card__face card__face--front" style="background-image: url('IMG_3277.jpg');"></div>
                 <div class="card__face card__face--back" style="background-image: url('IMG_3277.jpg');">
                     <div class="darker-overlay"></div>
-                    <div class="backcontent">BACK 2</div>
+                    <div class="backcontent">Staining</div>
                 </div>
             </div>
         </div>
@@ -78,7 +78,7 @@
                 <div class="card__face card__face--front" style="background-image: url('IMG_3275.jpg');"></div>
                 <div class="card__face card__face--back" style="background-image: url('IMG_3275.jpg');">
                     <div class="darker-overlay"></div>
-                    <div class="backcontent">BACK 2</div>
+                    <div class="backcontent">Patio Restoration</div>
                 </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
                 <div class="card__face card__face--front" style="background-image: url('faucet.jpg');"></div>
                 <div class="card__face card__face--back" style="background-image: url('faucet.jpg');">
                     <div class="darker-overlay"></div>
-                    <div class="backcontent">BACK 2</div>
+                    <div class="backcontent">Plumbing Repair</div>
                 </div>
             </div>
         </div>
