--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     </div>
     <div class="text">
         <p class="what-we-do-text">
-            We bring precision and efficiency to every repair service we provide for your restaurant.
-            We are equipped with the latest tools to handle everything from kitchen appliances to mild plumbing to drywall and paint. Trust us to keep your restaurant in perfect operational condition and no fret when it comes to emergencies.
+            We have the experience to tackle a wide range of problems that may pop up in your restaurant. 
+            We are able to handle everything from leaky faucet, clogged drains, holes in the walls, broken chairs, door handles, concrete repair and more. Trust us to keep your restaurant in perfect operational condition and no fret when it comes to emergencies.
 
         </p>
     </div>
