--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
                 <label for="plumbing">Minor Plumbing and Drains<span>&#x3e;</span></label>
                 <input type="radio" name="accordianthing" id="plumbing" >
                 <div class="content">
-                    <p> Experiencing leaks, drips, or clogs? Our skilled team provides efficient minor plumbing repairs, including fixing faucets, unclogging drains, and replacing washers. Trust us for quick, reliable service that keeps your plumbing in perfect working order</p>
+                    <p> Experiencing leaks, drips, or clogs? We provides efficient minor plumbing repairs, including fixing faucets, unclogging drains, and replacing washers. Trust us for quick, reliable service that keeps your plumbing in perfect working order</p>
                 </div>
             </li>
             
